# MeshMurammat

./: CMakeLists.txt  README.md  mesh.cpp  meshType.cpp  mesh_hole.cpp  mesh_hole.h  pointcloud.cpp  polygonalMesh.cpp
Front-end/: README.md  app.js  home.html  package-lock.json  package.json
Front-end/cppsrc/: test.cpp  test.h
Front-end/public/routes/: P.ply  armadillo.ply  cat0.ply  cube-minimal-extra-elements.ply  detected_hole.ply  double-torus.ply  edited_bunny.ply  holefill.ply  home.html  igea.ply  index.js  island_bunny.ply  main.cpp  mesh.cpp  polygoninput.ply  puppe.ply  squirrel_hole_back_round.ply  three.module.js
Front-end/public/stylesheets/: style.css
Front-end/public/uploads/: polygonaloutput.ply  triangulatedoutput.ply
Front-end/routes/: home.html  index.js  meshViewer.html  meshViewer.js  welcome.html
Hole_Detection/: CMakeLists.txt  main.cpp  mesh_type.cpp
Hole_Filling/: CMakeLists.txt  README.md  main.cpp  mesh.cpp  mesh_holes.cpp  mesh_type.cpp  mesh_type.h  nonmanifold_mesh.cpp  nonmanifold_mesh.h  pointcloud.h  polygonal_mesh.cpp  polygonal_mesh.h
Mesh_Conversion/: CMakeLists.txt  main.cpp
Mesh_Type/: main.cpp  mesh_holes.cpp  mesh_type.cpp  mesh_type.h  nonmanifold_mesh.cpp  nonmanifold_mesh.h  pointcloud.cpp  pointcloud.h  polygonal_mesh.cpp  polygonal_mesh.h
Mesh_Viewer/: meshViewer.html  meshViewer.js
noiseAdder/: info.txt  main.cpp  noiseAdder.cbp  noiseAdder.depend  noiseAdder.layout
